<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/holaMundoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola_mundo_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/containedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contained_button_text"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:icon="@android:drawable/ic_input_add"
        app:iconTint="@color/black"
        app:iconPadding="@dimen/cardview_compat_inset_shadow"
        app:iconSize="30sp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/holaMundoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/textButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_text"
        android:background="@null"
        app:icon="@android:drawable/ic_input_add"
        app:iconGravity="textEnd"
        android:textSize="18sp"
        app:iconPadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/containedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1_text"
        app:layout_constraintTop_toBottomOf="@+id/textButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2_text"
        app:layout_constraintTop_toBottomOf="@+id/textButton"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3_text"
        app:layout_constraintTop_toBottomOf="@+id/textButton"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/customButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_button_text"
        android:textColor="@color/white"
        app:backgroundTint="#FF2222"
        app:strokeColor="#000000"
        app:strokeWidth="3dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
